# src/controller/userController.ts
@@ -1,41 +1,49 @@
-// userController.ts
-
 import { Request, Response } from "express";
 import { UserService } from "../service/userService";
 import StatusCodes from "../utils/const/statusCode";
 import {
+  Query,
   Route,
   Get,
   Post,
   Put,
   Delete,
-  Request as TRequest,
-  Response as TResponse,
   Path,
   Body,
+  Queries,
 } from "tsoa";
 
 const userService = new UserService();
 
+interface QueryParams {
+  limit?: string;
+  page?: string;
+}
+
 @Route("user")
 export class UserController {
   @Get("/")
-  public async getAllUsers(): Promise<any> {
+  public async getAllUsers(@Queries() queryParams: QueryParams): Promise<any> {
     try {
-      const users = await userService.getAllUsers();
-      if (users.length > 0) {
-        return {
-          status: "success",
-          message: "Users are found",
-          data: users,
-        };
-      } else {
-        return {
-          status: "success",
-          message: "No Users Found",
-          data: [],
-        };
-      }
+      const pageNumber = queryParams ? parseInt(queryParams.page as string) : 1;
+      const pageSize = queryParams ? parseInt(queryParams.limit as string) : 10;
+
+      const users = await userService.getAllUsers(pageNumber, pageSize);
+
+      const totalCount = await userService.getUserCount();
+      const totalPages = Math.ceil(totalCount / pageSize);
+
+      return {
+        status: "success",
+        message: "Users are found",
+        data: users,
+        meta: {
+          page: pageNumber,
+          limit: pageSize,
+          total: totalCount,
+          totalPages: totalPages,
+        },
+      };
     } catch (err: any) {
       throw new Error(err.message);
     }
